[package]
name = "pqc-tcp-stream-encryption"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
bufstream = "0.1.4"
clap = "2.33"
serde = "1.0.130"
serde_json = "1.0.68"
oqs-sys = { path = "../oqs-rs/oqs-sys"}
oqs = { path = "../oqs-rs/oqs", features = ["serde"]}
rand = "0.8.4"
